--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -37,10 +37,14 @@ $primaryColor: #fe2c55;
   font-weight: 700;
   font-size: 1.4rem;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 20px;
+  right: 20px;
   background-color: #fff;
   border: 1px solid #1618231f;
+  transition: transform 0.3s cubic-bezier(0.4, 0.14, 0.3, 1);
+  &:hover {
+    opacity: 0.75;
+  }
 }
 .primary {
   background-color: $primaryColor;
